creat my resume

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div class="resume">
     <div class = "navigator clearfix" >
         <div class = "title">
-            <span class = "title_name">刘尚宇</span>
-            <span class = "title_position">职位:全栈(偏前端)</span>
+            <span class = "title_name">郭雨枫</span>
+            <span class = "title_position">职位:算法</span>
         </div>
         <div class = "contact">
             <ul>
@@ -31,8 +31,8 @@
         <div class = "privateinfo">
         	<img class = "header" src = "img/1.jpg"/>
             <div class = "details">
-            	姓名:刘尚宇<br>
-                CET6: 505
+            	姓名:算法<br>
+                CET6: 550
                 <br>
                 <br>
                 
