modify my resume

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <li class = "phone">
                 </li>
                 <li class = "email">
-                    <a class = "link" href="mailto:liushangyu@lnm.imech.ac.cn">liushangyu@lnm.imech.ac.cn</a>
+                    <a class = "link" href="mailto:liushangyu@lnm.imech.ac.cn">guoyf@nanoctr.cn</a>
                 </li>
                 <li class = "github">
-                	<a class = "link" href="https://github.com/ironlionliu/">github</a>
+                	<a class = "link" href="https://github.com/York-yanyu">github</a>
                 </li>
 
-                <li class = "blog"><a href="http://shangyuliu.postach.io/">个人博客</a></li>
+                <li class = "blog"><a href="http://York-yanyu.postach.io/">个人博客</a></li>
             </ul>
         </div>
         <div class = "privateinfo">
@@ -71,8 +71,8 @@
                 近代力学（学士学位）&nbsp;&nbsp;&nbsp;&nbsp;计算机科学（双学士学位）</li>
                 <br>
                 <li>2014.09-2017.07</li>
-                <li>中国科学院大学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                中国科学院力学研究所（非线性力学国家重点实验室）</li><BR>
+                <li>中国科学技术大学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                国家纳米科学中心（联合培养）</li><BR>
                 
             	
             </ul>
